# masjid_management_system

./: .gitignore  feature_tracker.md  masjid.db  pyproject.toml  read_batch.py
docs/: frontend_pages_analysis.md
docs/features/: 01-platform-and-multi-masjid-architecture.md  02-authentication-and-authorization.md  03-masjid-profile-and-customization.md  04-income-management.md  05-expense-management.md  06-account-and-balance-management.md  07-monthly-donation-and-donor-management.md  08-reporting-and-analytics.md  09-notifications-and-alerts.md  10-audit-and-activity-log.md
docs/walkthrough/: Feature 01 Walkthrough: Platform & Multi-Masjid Architecture.md  Feature 1 Platform & Multi-Masjid Architecture_walkthrough.md  Feature 2 Authentication & Authorization Feature.md  Feature_2_Authentication_&_Authorization_Feature.md  Feature_4_Income_Management_walkthrough.md  Feature_6_Account_&_Balance_Management_walkthrough.md  Feature_7_Monthly_Donation_&_Donor_Management_walkthrough.md  Feature_8_Reporting_&_Analytics_walkthrough.md  all features.md  feature 3 Masjid Profile & Customization _walkthrough.md  feature 5 Expense Management _walkthrough.md  feature_10_walkthrough.md  feature_3_Masjid_Profile_&_Customization__walkthrough.md  feature_9_walkthrough.md
requirements/: masjid-management-system-requirements.md
src/: main.py
src/api/: dependencies.py
src/core/: config.py  security.py
src/crud/: audit_log.py  crud_account.py  crud_donation.py  crud_donor.py  crud_expense.py  crud_income.py  crud_masjid.py  notification.py  user.py
tests/: conftest.py
(+61 files in other folders)
